examples/test/testpolicy18947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18947
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key41: value25
      key13: value6
      key45: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value43
          key29: value14
      podSelector:
        matchLabels:
          key30: value9
          key34: value4
